Sample.atg
COMPILER Sample

public SymbolTable tab;
public CodeGenerator gen = new CodeGenerator();

CHARACTERS
	digit = '0'..'9'.
	letter = 'A'..'Z' + 'a'..'z'.
	lf = '\u000a'.

TOKENS
	var = letter {letter | digit | '_'}.
	number = ['-'] digit {digit}.

COMMENTS FROM "/*" TO "*/" NESTED
COMMENTS FROM "//" TO lf

IGNORE '\r' + '\n' + '\t'

PRODUCTIONS
	
	Sample								(. tab = new SymbolTable(); /* CodeGenerator gen = new CodeGenerator(); */ gen.initFile(); .)
	= Statement {Prints}				(. gen.closeFile(); .)
	.
	
	Statement							(. int nVars, nIn; .)
	=
	Variables<out nVars>
	'='
	Method<out nIn>
	';'									(. if(nVars != nIn) SemErr("El par'ametro no coincide con el n'umero de variables indicado.");.)
	.

	Variables<out int numVars>			(. numVars = 0; String vName, vName0; .)
	=
	var									(. numVars++; tab.insert(t.val); gen.insert(t.val); .)
	{ ',' 
	var									(. 
										if(tab.find(t.val) != null){ SemErr("Nombre de variable " + t.val + " ya existe.");}
										else{ tab.insert(t.val); numVars++; gen.insert(t.val); }
										.)
	}
	.

	Method<out int n>					(. n = 0; .)
	=
	"metodo"
	'('
	number								(.
										try{ n = Integer.parseInt(t.val); } catch(Exception e){}
										if(n > 6 || n < 1) SemErr("El par'ametro debe ser mayor a cero y menor a seis.");
										.)
	')'
	.

	Prints
	=
	"print"
	var									(. if(tab.find(t.val) == null){ SemErr("Variable " + t.val + " no existe."); }
										else{ gen.printVal(t.val); } .)
	';'
	.

END Sample.
